--- a/slides/11-randeff/randeff.Rmd
+++ b/slides/11-randeff/randeff.Rmd
@@ -230,9 +230,13 @@ We found the REML estimate is exactly same as ANOVA estimate. **Exercise (HW4)**
 
 ## Inference
 
+### LRT and adjusted F test for fixed effects
+
 - If we compare two nested models that differ only in fixed effects, we can use the standard likelihood ratio test (LRT). Remember we have to use MLE (not REML) for LRT.  
 
-- F tests for fixed effects need to use adjusted degrees of freedom (Kenward-Roger adjusted F-test), as implemented in the `pbkrtest` package.
+- F tests for fixed effects need to use adjusted degrees of freedom (Kenward-Roger adjusted F-test for REML), as implemented in the `pbkrtest` package.
+
+### Parametric bootstrap
 
 - Testing the variance component parameters, e.g., $H_0:\sigma_{\alpha}^2=0$, can be hard because of the boundary condition (estimator has to be nonnegative). Conventional $\chi^2$ null distribution for LRT can be wrong. E.g., for the `pulp` data, LRT using the the conventional $\chi_1^2$ null distribution gives a non-significant p-value. 
 ```{r}
@@ -241,8 +245,6 @@ nullmod <- lm(bright ~ 1, data = pulp)
 # fishy result using LRT
 pchisq(lrtstat, 1, lower.tail = FALSE)
 ```
-
-### Parametric bootstrap
 
 - The idea of parameteric bootstrap is we generate new $y$ from the fitted null model many times. For each simulation replicate, we calculate the LRT statistic. Then the p-value is estimated by the proportion of simulation replicates that generate LRT statistics larger than the observed one $2.5684$.
 
@@ -403,18 +405,20 @@ ranef(mmod)$blend
 
 ### Test fixed effects
 
-- F-tests can be achieved using adjusted degrees of freedom.
+- Kenward-Roger adjusted F-tests for REML.
 ```{r}
 library(pbkrtest)
 
-amod <- lmer(yield ~ treat + (1 | blend), data = penicillin, REML = FALSE)
-nmod <- lmer(yield ~ 1 + (1 | blend), penicillin, REML = FALSE)
-KRmodcomp(amod, nmod)
+amod_reml <- lmer(yield ~ treat + (1 | blend), data = penicillin, REML = TRUE)
+nmod_reml <- lmer(yield ~ 1 + (1 | blend), data = penicillin, REML = TRUE)
+KRmodcomp(amod_reml, nmod_reml)
 ```
 
 -  LRT using $\chi^2$ null distribution.
 ```{r}
-as.numeric(2 * (logLik(amod, REML = FALSE) - logLik(nmod, REML = FALSE)))
+amod_mle <- lmer(yield ~ treat + (1 | blend), data = penicillin, REML = FALSE)
+nmod_mle <- lmer(yield ~ 1 + (1 | blend), data = penicillin, REML = FALSE)
+as.numeric(2 * (logLik(amod_mle, REML = FALSE) - logLik(nmod_mle, REML = FALSE)))
 ```
 The $\chi_3^2$ approximation gives p-value
 ```{r}
@@ -428,7 +432,7 @@ set.seed(123)
 B <- 1000
 lrstat <- numeric(B)
 for (i in 1:B) {
-  ryield <- unlist(simulate(nmod))
+  ryield <- unlist(simulate(nmod_mle))
   nmodr <- suppressMessages(lmer(ryield ~ 1 + (1 | blend), data = penicillin, REML = FALSE))
   amodr <- suppressMessages(lmer(ryield ~ treat + (1 | blend), data = penicillin, REML = FALSE))
   lrstat[i] <- 2 * (logLik(amodr, REML = FALSE) - logLik(nmodr, REML = FALSE))
@@ -444,13 +448,13 @@ with standard error
 sqrt(pval * (1 - pval) / B)
 ```
 
-- The `pbkrtest` packages automate this parametric boostrap procedure (`PBtest`) along with LRT and other tests for fixed effects.
+- The `pbkrtest` packages automate this parametric boostrap procedure (`PBtest`) along with LRT and other tests for fixed effects. LRT and parametric bootstrap results are similar to what we got. Note the F test here is the LRT divided by the degrees of freedom assumed to be F-distributed.
 ```{r}
 library(pbkrtest)
 
 set.seed(123)
-pmod <- PBmodcomp(amod, nmod)
-summary(pmod)
+PBmodcomp(amod_reml, nmod_reml) %>%
+  summary()
 ```
 
 ### Test random effects
