announcement for 5/26 lecture

--- a/slides/14-np/np.Rmd
+++ b/slides/14-np/np.Rmd
@@ -11,7 +11,7 @@ subtitle: Biostat 200C
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(fig.align = 'center', cache = TRUE)
+knitr::opts_chunk$set(fig.align = 'center', cache = FALSE)
 ```
 
 Display system information and load `tidyverse` and `faraway` packages
@@ -128,7 +128,235 @@ with(exb, sm.regression(x, y, h = h.select(x, y)))
 
 ## Splines
 
-## Local polynomial
+### Smoothing splines
+
+- We choose $\hat f$ to minize the modified least squares criterion
+$$
+\frac 1n \sum_i [y_i - f(x_i)]^2 + \lambda \int [f''(x)]^2 \, dx,
+$$
+where $\lambda > 0$ is the smoothing paramter and $\int [f''(x)]^2 \, dx$ is a **roughness penalty**. For large $\lambda$, the minimizer $\hat f$ is smoother; for smaller $\lambda$, the minizer $\hat f$ is rougher. This is the **smoothing spline** fit.
+
+- The minimizer takes a special form: $\hat f$ is a cubic spline (piecewise cubic polynomial in each interval $(x_i, x_{i+1})$). 
+
+- The tuning parameter $\lambda$ is chosen by cross-validation in R.
+
+```{r}
+with(faithful, {
+  plot(waiting ~ eruptions, col = gray(0.75))
+  lines(smooth.spline(eruptions, waiting), lty = 2)
+})
+```
+
+```{r}
+with(exa, {
+  plot(y ~ x, col = gray(0.75))
+  lines(x, m)
+  lines(smooth.spline(x, y), lty = 2)
+})
+```
+
+```{r}
+with(exb, {
+  plot(y ~ x, col = gray(0.75))
+  lines(x, m)
+  lines(smooth.spline(x, y), lty = 2)
+})
+```
+
+### Regression splines
+
+- The **regresison spline** fit differs from the smoothing splines in that the number of knots can be much smaller than the sample size. 
+
+- Piecewise linear splines:
+
+```{r}
+rhs <- function(x, c) ifelse(x > c, x - c, 0)
+curve(rhs(x, 0.5), 0, 1)
+```
+
+- Define some knots for Example A
+```{r}
+(knots <- 0:9 / 10)
+```
+and compute a design matrix of splines with knots at these points for each $x$:
+```{r}
+dm <- outer(exa$x, knots, rhs)
+matplot(exa$x, dm, type = "l", col = 1, xlab = "x", ylab="")
+```
+
+- Compute and dipslay the regression spline fit.
+```{r}
+lmod <- lm(exa$y ~ dm)
+plot(y ~ x, exa, col = gray(0.75))
+lines(exa$x, predict(lmod))
+```
+
+- We can acheive better fit by using more knots in denser regions of greater curvature.
+```{r}
+newknots <- c(0, 0.5, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95)
+dmn <- outer(exa$x, newknots, rhs)
+lmod <- lm(exa$y ~ dmn)
+plot(y ~ x, data = exa, col = gray(0.75))
+lines(exa$x, predict(lmod))
+```
+
+- High-order splines can produce a smoother fit. The `bs()` function can be used to generate the appropriate spline basis. The default is cubic B-splines.
+```{r}
+library(splines)
+
+matplot(bs(seq(0, 1, length = 1000), df = 12), type = "l", ylab="", col = 1)
+```
+
+```{r}
+lmod <- lm(y ~ bs(x, 12), exa)
+plot(y ~ x, exa, col = gray(0.75))
+lines(m ~ x, exa)
+lines(predict(lmod) ~ x, exa, lty = 2)
+```
+
+## Local polynomials
+
+- Both kernel and spline smoothers are vulnerable to outliers.
+
+- **Local polynomial** method fit a polynomial in a window using robust methods, then the predicted response at the middle of the window is the fitted value. This procedure is repeated by sliding the window over the range of the data. **lowess** or **loess** method.
+
+- We need to choose the order of polynomial and window width. Default window width is 3/4 of data. 
+
+- Examples.
+
+```{r}
+with(faithful, {
+  plot(waiting ~ eruptions, col = gray(0.75))
+  f <- loess(waiting ~ eruptions)
+  i <- order(eruptions)
+  lines(f$x[i], f$fitted[i])
+})
+```
+
+```{r}
+with(exa, {
+  plot(y ~ x, col = gray(0.75))
+  lines(m ~ x)
+  f <- loess(y ~ x)
+  lines(f$x, f$fitted, lty = 2)
+  # try smaller span (proportion of the range)
+  f <- loess(y ~ x, span = 0.22)
+  lines(f$x, f$fitted, lty = 5)
+})
+```
+
+```{r}
+with(exb, {
+  plot(y ~ x, col = gray(0.75))
+  lines(m ~ x)
+  f <- loess(y ~ x)
+  lines(f$x, f$fitted, lty = 2)
+  # splan = 1 means whole span of data (smoothest)
+  f <- loess(y ~ x, span = 1)
+  lines(f$x, f$fitted, lty = 5)
+})
+```
+
+- Pointwise confidence band is obtained by the local parametric fit for smoothing splines and loess.
+
+```{r}
+ggplot(data = exa, mapping = aes(x = x, y = y)) +
+  geom_point(alpha = 0.25) + 
+  geom_smooth(method = "loess", span = 0.22) + 
+  geom_line(mapping = aes(x = x, y = m), linetype = 2)
+```
+
+- Simultaneous confidence band can be constructed by the `mgcv` package.
+
+```{r}
+library(mgcv)
+
+ggplot(data = exa, mapping = aes(x = x, y = y)) +
+  geom_point(alpha = 0.25) + 
+  geom_smooth(method = "gam", span = 0.22, formula = y ~ s(x, k = 20)) + 
+  geom_line(mapping = aes(x = x, y = m), linetype = 2)
+```
 
 ## Wavelets
 
+- In general, we approximate a curve by a family of basis functions
+$$
+\hat f(x) = \sum_i c_i \phi_i(x),
+$$
+where the basis functions $\phi_i$ are given and the coefficients $c_i$ are estimated. 
+
+- Ideally we would like the basis functions $\phi_i$ to be (1) compactly supported (adatped to local data points) and (2) orthogonal (fast computing). 
+
+- Orthogonal polynomials and Fourier basis are not compactly supported. 
+
+- Cubic B-splines are compactly supported but not orthogonal. 
+
+- **Wavelets** are both compactly supported and orthogonal. 
+
+- **Haar basis**. The mother wavelet function on [0, 1]
+$$
+w(x) = \begin{cases}
+1 & x \le 1/2 \\
+-1 & x > 1/2
+\end{cases}.
+$$
+Next two members are defined on [0, 1/2) and [1/2, 1) by rescaling the mother wavelet to these two intervals. In general, at level $j$
+$$
+h_n(x) = 2^{j/2} w(2^j x - k),
+$$
+where $n = 2^j + k$ and $0 \le k \le 2^j$. 
+
+```{r}
+library(wavethresh)
+
+wds <- wd(exa$y, filter.number = 1, family = "DaubExPhase")
+draw(wds)
+plot(wds)
+```
+
+Let's only retain 3 levels of coefficients.
+```{r}
+wtd <- threshold(wds, policy = "manual", value = 9999)
+fd <- wr(wtd)
+plot(y ~ x, exa, col = gray(0.75))
+lines(m ~ x, exa)
+lines(fd ~ x, exa, lty = 5, lwd = 2)
+```
+
+Or we can zero out only the small coefficients.
+```{r}
+wtd2 <- threshold(wds)
+fd2 <- wr(wtd2)
+plot(y ~ x, exa, col = gray(0.75))
+lines(m ~ x, exa)
+lines(fd2 ~ x, exa, lty = 5, lwd = 2)
+```
+
+- We may perfer to use continuous wavelet basis functions.
+
+```{r}
+wds <- wd(exa$y, filter.number = 2, bc = "interval")
+draw(filter.number = 2, family = "DaubExPhase")
+plot(wds)
+```
+
+Now we zero out small coefficients.
+```{r}
+wtd <- threshold(wds)
+fd <- wr(wtd)
+plot(y ~ x, exa, col = gray(0.75))
+lines(m ~ x, exa)
+lines(fd ~ x, exa, lty=2)
+```
+
+- For the Old Faithful data.
+
+```{r}
+x <- with(faithful, (eruptions - min(eruptions)) / (max(eruptions) - min(eruptions)))
+gridof <- makegrid(x, faithful$waiting)
+wdof <- irregwd(gridof, bc="symmetric")
+wtof <- threshold(wdof)
+wrof <- wr(wtof)
+plot(waiting ~ eruptions, faithful, col = grey(0.75))
+with(faithful, lines(seq(min(eruptions), max(eruptions), len=512), wrof))
+```
