--- a/_posts/2020-05-26-week9-day1.md
+++ b/_posts/2020-05-26-week9-day1.md
@@ -20,6 +20,6 @@ category: biostat200Cspring2020
     
     * Q4 and later.
 
-* Feedback: ask or write comments if not sure, 
+* Test taking techniques: ask or write comments if not sure, 
 
 * 
